[package]
name = "transactious"
version = "0.1.0"
authors = ["Dexter Darwich <dex.darwich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"